Added variable confirm prompts for the required used feedback.

--- a/indexscript.html
+++ b/indexscript.html
@@ -21,6 +21,14 @@
 
                 var numberOfCharachters = prompt("How many charachters would you like your password to be? Pick a value between 8 and 128.")
 
+                var lowerCase = confirm("Do you want to include lower case letters?")
+
+                var upperCase = confirm("Do you want to include upper case letters?")
+
+                var numbers = confirm("Do you want to include numbers?")
+
+                var specialCharachters = confirm("Do you want to inculde special charachters?")
+
                 
 
                 // generates random number based on the number of charachters requested in the prompt and prints it to the console log
